# webrtc-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs  canary.py  prek.toml
examples/whep/: Cargo.toml
examples/whep/src/: main.rs
examples/whip/: Cargo.toml
examples/whip/src/: main.rs
issues/: 0000-template.md  0001-feature-add-audio-sink-interface-c-api.md  0002-feature-add-audio-track-sink-and-cast-c-api.md  0003-feature-add-audio-sink-and-cast-rust-api.md  0003-feature-add-remove-track-api.md  0004-feature-add-remove-track-rust-binding.md  0007-feature-add-get-rtp-receiver-capabilities.md  0010-feature-add-always-negotiate-data-channels.md  0011-bug-whip-whep-tls-no-cert-verification.md  0012-bug-whip-whep-ignore-url-scheme.md  0013-bug-whip-whep-urlparts-strndup-null-deref.md  0014-bug-webrtc-c-create-random-string-int-length.md  0015-bug-whip-cpp-unchecked-sender-content-index.md  0016-bug-whip-cpp-codec-name-null-deref.md  0017-bug-whip-whep-http-status-not-checked.md  0018-bug-whip-whep-content-length-chunked-ignored.md  0019-bug-whip-whep-ssl-io-return-handling.md  0020-bug-whip-whep-find-header-value-lf-only.md  0021-bug-whip-whep-link-header-parse-fragile.md  0022-bug-whip-cpp-regex-exception-terminate.md  0023-bug-whip-cpp-on-response-double-call.md  0024-bug-webrtc-c-refcounted-direct-cast.md  0025-bug-webrtc-c-cast-to-unchecked-static-cast.md  0026-bug-webrtc-c-vector-new-int-size.md  0027-bug-webrtc-c-std-map-iterator-lifetime.md  0028-bug-webrtc-c-std-string-size-int-truncation.md  0029-bug-webrtc-c-objc-nserror-release-null-check.md  0029-refactor-remove-objc-nsstring-release-null-check.md  0030-bug-webrtc-c-ssl-cert-chain-get-lifetime.md  0031-bug-webrtc-c-thread-start-return-and-quit.md  0032-bug-whep-video-track-race.md  0033-bug-whip-cpp-pc-disconnect-race.md  0034-bug-whip-whep-connect-no-timeout.md  0035-bug-whip-fake-capturer-calloc-overflow.md  0036-bug-whip-video-init-leak.md  0037-bug-whip-whep-credential-logging.md  (+33 more)
multistrap/: ubuntu-22.04_armv8.conf  (+2 more)
webrtc/: .gitignore  CMakeLists.txt  RULES.md  android.toolchain.cmake  deps.json  run.py
webrtc/scripts/: bundle_apple_static_library.sh
webrtc/src/: webrtc_c.h  whep.c  whep.cpp  whip.c  whip.cpp
webrtc/src/webrtc_c/: android.h  common.h  common.impl.h  ios.h  jni_export.cc  jni_export.h  libyuv.cc  libyuv.h  objc.h  objc.mm  std.cc  std.h  std.impl.h
webrtc/src/webrtc_c/api/: data_channel_interface.cc  data_channel_interface.h  dtls_transport_interface.cc  dtls_transport_interface.h  environment.cc  environment.h  jsep.cc  jsep.h  media_stream_interface.cc  media_stream_interface.h  media_types.cc  media_types.h  peer_connection_interface.cc  peer_connection_interface.h  priority.cc  priority.h  ref_count.cc  ref_count.h  rtc_error.cc  rtc_error.h  rtc_event_log.cc  rtc_event_log.h  rtp_parameters.cc  rtp_parameters.h  rtp_receiver_interface.cc  rtp_receiver_interface.h  rtp_sender_interface.cc  rtp_sender_interface.h  rtp_transceiver_direction.cc  rtp_transceiver_direction.h  rtp_transceiver_interface.cc  rtp_transceiver_interface.h  set_local_description_observer_interface.cc  set_local_description_observer_interface.h  set_remote_description_observer_interface.cc  set_remote_description_observer_interface.h
webrtc/src/webrtc_c/api/audio/: audio_device.cc  audio_device.h  audio_device_defines.cc  audio_device_defines.h  audio_processing.cc  audio_processing.h  audio_track_sink_interface.cc  audio_track_sink_interface.h
webrtc/src/webrtc_c/api/audio_codecs/: audio_decoder_factory.cc  audio_decoder_factory.h  audio_encoder_factory.cc  audio_encoder_factory.h
webrtc/src/webrtc_c/api/stats/: rtc_stats_collector_callback.h  rtc_stats_report.cc  rtc_stats_report.h
webrtc/src/webrtc_c/api/video/: color_space.cc  color_space.h  encoded_image.cc  encoded_image.h  encoded_image_buffer.cc  encoded_image_buffer.h  i420_buffer.cc  i420_buffer.h  nv12_buffer.cc  nv12_buffer.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_rotation.cc  video_rotation.h  video_sink_interface.cc  video_sink_interface.h  video_source_interface.cc  video_source_interface.h
webrtc/src/webrtc_c/api/video_codecs/: codec_specific_info.cc  codec_specific_info.h  sdp_video_format.cc  sdp_video_format.h  simulcast_stream.cc  simulcast_stream.h  video_codec.cc  video_codec.h  video_decoder.cc  video_decoder.h  video_decoder_factory.cc  video_decoder_factory.h  video_encoder.cc  video_encoder.h  video_encoder_factory.cc  video_encoder_factory.h
webrtc/src/webrtc_c/media/base/: adapted_video_track_source.cc  adapted_video_track_source.h
webrtc/src/webrtc_c/media/engine/: simulcast_encoder_adapter.cc  simulcast_encoder_adapter.h
webrtc/src/webrtc_c/modules/video_coding/codecs/interface/: common_constants.cc  common_constants.h
webrtc/src/webrtc_c/modules/video_coding/include/: video_codec_interface.cc  video_codec_interface.h
webrtc/src/webrtc_c/pc/: connection_context.cc  connection_context.h
webrtc/src/webrtc_c/rtc_base/: crypto_random.cc  crypto_random.h  logging.cc  logging.h  ssl_adapter.cc  ssl_adapter.h  ssl_certificate.cc  ssl_certificate.h  ssl_identity.cc  ssl_identity.h  thread.cc  thread.h  time_utils.cc  time_utils.h  timestamp_aligner.cc  timestamp_aligner.h
webrtc/src/webrtc_c/sdk/android/native_api/audio_device_module/: audio_device_android.cc  audio_device_android.h
webrtc/src/webrtc_c/sdk/android/native_api/codecs/: wrapper.cc  wrapper.h
webrtc/src/webrtc_c/sdk/android/native_api/jni/: class_loader.cc  class_loader.h
webrtc/src/webrtc_c/sdk/android/src/jni/: jvm.cc  jvm.h
webrtc/src/webrtc_c/sdk/objc/components/audio/: audio_session.h  audio_session.mm
webrtc/src/webrtc_c/sdk/objc/components/video_codec/: RTCDefaultVideoDecoderFactory.h  RTCDefaultVideoDecoderFactory.mm  RTCDefaultVideoEncoderFactory.h  RTCDefaultVideoEncoderFactory.mm
webrtc/src/webrtc_c/sdk/objc/native/api/: video_decoder_factory.h  video_decoder_factory.mm  video_encoder_factory.h  video_encoder_factory.mm
(+64 files in other folders)
