[package]
name = "shiguredo_webrtc"
version = "0.146.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Rust bindings for libwebrtc"
homepage = "https://github.com/shiguredo/webrtc-rs"
repository = "https://github.com/shiguredo/webrtc-rs"
readme = "README.md"
build = "build.rs"
include = [
    "/src/**",
    "/webrtc/**",
    "build.rs",
    "sysroot/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = []
local-export = []
source-build = []

[dependencies]

[package.metadata.external-dependencies]
webrtc-build = { version = "m146.7680.0.0", base-url = "https://github.com/shiguredo-webrtc-build/webrtc-build/releases/download" }

[build-dependencies]
bindgen = "0.72"
shiguredo_cmake = "4.2.3"
shiguredo_toml = "2026.1"

[workspace]
members = ["examples/*"]
