[package]
name = "shiguredo_webrtc"
version = "0.146.2-canary.4"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Rust bindings for libwebrtc"
homepage = "https://github.com/shiguredo/webrtc-rs"
repository = "https://github.com/shiguredo/webrtc-rs"
readme = "README.md"
build = "build.rs"
include = [
    "/src/**",
    "/webrtc/**",
    "build.rs",
    "sysroot/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = []
local-export = []
source-build = []

[dependencies]

[package.metadata.external-dependencies]
webrtc-build = { version = "m146.7680.3.1", base-url = "https://github.com/shiguredo-webrtc-build/webrtc-build/releases/download" }

[package.metadata.build-config]
cmake-osx-deployment-target = "16.0"
android-platform = "android-24"
android-commandlinetools-version = "14742923"
android-ndk-version = "27.2.12479018"

[build-dependencies]
bindgen = "0.72"
shiguredo_cmake = "4.3.0"
shiguredo_toml = "2026.1"
nojson = "0.3"

[workspace]
members = ["examples/*"]
