[package]
name = "shiguredo_webrtc"
version = "0.147.2"
edition = "2024"
rust-version = "1.88"
description = "Rust bindings for libwebrtc"
readme = "README.md"
homepage = "https://github.com/shiguredo/webrtc-rs"
repository = "https://github.com/shiguredo/webrtc-rs"
license = "Apache-2.0"
build = "build.rs"
include = [
  "/src/**",
  "/webrtc/**",
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "build.rs",
  "sysroot/*",
]

[package.metadata.external-dependencies]
webrtc-build = { version = "m147.7727.11.0", base-url = "https://github.com/shiguredo-webrtc-build/webrtc-build/releases/download" }

[package.metadata.build-config]
cmake-osx-deployment-target = "16.0"
android-platform = "android-24"
android-commandlinetools-version = "14742923"
android-ndk-version = "27.2.12479018"

[workspace]
members = ["examples/*"]

[dependencies]

[build-dependencies]
bindgen = "0.72"
nojson = "0.3"
shiguredo_cmake = "4.3"
shiguredo_toml = "2026.1"

[features]
default = []
local-export = []
source-build = []
