[package]
name = "whip"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
noargs = "0.4"
rustls = {
  version = "0.23",
  default-features = false,
  features = [
    "aws-lc-rs",
    "std",
    "tls12",
  ]
}
rustls-platform-verifier = "0.7"
shiguredo_http11 = "2026.6"
shiguredo_webrtc = { path = "../.." }
